added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -11,3 +11,19 @@
   title = {{Journal status}},
   journal = {Scientometrics},
 }
+
+
+@article{Dong_2015,
+  doi = {10.1371/journal.pone.0120039},
+  url = {http://dx.doi.org/10.1371/journal.pone.0120039},
+  year = {2015},
+  month = {mar},
+  publisher = {Public Library of Science ({PLoS})},
+  volume = {10},
+  number = {3},
+  pages = {e0120039},
+  author = {Xianlei Dong and Johan Bollen},
+  editor = {Tobias Preis},
+  title = {{Computational Models of Consumer Confidence from Large-Scale Online Attention Data: Crowd-Sourcing Econometrics}},
+  journal = {{PLOS} {ONE}},
+}
