added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -27,3 +27,18 @@
   title = {{Computational Models of Consumer Confidence from Large-Scale Online Attention Data: Crowd-Sourcing Econometrics}},
   journal = {{PLOS} {ONE}},
 }
+
+
+@article{Pampel_2007,
+  doi = {10.1177/0044118x07308070},
+  url = {http://dx.doi.org/10.1177/0044118x07308070},
+  year = {2007},
+  month = {aug},
+  publisher = {{SAGE} Publications},
+  volume = {39},
+  number = {4},
+  pages = {453--479},
+  author = {F. C. Pampel and J. Aguilar},
+  title = {{Changes in Youth Smoking 1976-2002: A Time-Series Analysis}},
+  journal = {Youth {\&} Society},
+}
